fix: about text align

--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -1015,6 +1015,7 @@ body {
     font-size: 2.5rem;
     line-height: 130%;
     letter-spacing: 0.21rem;
+    text-align: center;
   }
   .about__description {
     text-align: justify;
